Name overflow fix

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ footer {
     margin-top: -5px;
     margin-bottom: 10px;
     width: fit-content;
-    transform: scaleY(1.3);
+    transform: scaleY(1.15);
     letter-spacing: 0.1rem;
 }
 
